--- a/note.html
+++ b/note.html
@@ -7,8 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Roboto+Mono:wght@100&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karma:wght@300&family=Nunito:wght@200&family=Quicksand:wght@300&family=Roboto+Mono:wght@100&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
+    <nav class = "Navigation Bar">
+        <h1> 
+        <ul>
+            <li> <a href="#">About</a></li>
+            <li>  <a href="#">Docs</a></li>
+        </ul>
+        </h1>
+    </nav>
+    <footer>
+        <p>
+            Created by Simon Freemaj
+        </p>
+    </footer>
 </body> 
