Added buttons to all my pages.

--- a/note.html
+++ b/note.html
@@ -19,6 +19,10 @@
         </ul>
         </h1>
     </nav>
+    <button class="new_note"
+        type="button">
+    Create a new note
+    </button>
     <footer>
         <p>
             Created by Simon Freemaj
