--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Note-Taking Website</title>
 </head>
 <body>
-    <nav class = "Navigation Bar">
+    <nav class = "Navigation_Bar">
         <h1> 
         <ul>
             <li> <a href="#">About</a></li>
@@ -20,6 +20,11 @@
         </ul>
         </h1>
     </nav>
+    <button class="new_note"
+        type="button">
+    Create a new note
+    </button>
+
     <footer>
         <p>
             Created by Simon Freeman
