Added save and delete buttons

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
         </ul>
         </h1>
     </nav>
+    <button class="slide_out_button"
+        type="button">
+    >>
+    </button>
     <button class="new_note"
         type="button">
-    Create a new note
+    + create a new note
     </button>
 
     <footer>
