created slide-out menu, notes list, and slide out menu button

--- a/note.html
+++ b/note.html
@@ -18,18 +18,17 @@
             <li>  <a href="#">Docs</a></li>
         </ul>
         </h1>
-    <nav class="sidenav">
+    <div class="sidelist">
         <button class="slide_in_button"
         type="button">
         <<
         </button>
         <ul>
-            <li><a href="#"> my notes</a></li>
-            <li><a href="#"> note one</a></li>
-            <li><a href="#"> note two</a></li>
-
+            <li class ="my_notes">my notes</li>
+            <li>note one</li>
+            <li>note two</li>
         </ul>
-    </nav>
+    </div>
     <button class="new_note"
         type="button">
     +
