Created containers for my side menu and one for my textbox and buttons to make sure they work in different screen sizes

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <title>Note-Taking Website</title>
 </head>
 <body>
-    <nav class = "Navigation_Bar">
-        <h1> 
+   
+    <header> 
+        <nav class = "Navigation_Bar">
         <ul>
             <li> <a href="#">About</a></li>
             <li>  <a href="#">Docs</a></li>
         </ul>
-        </h1>
     </nav>
+    </header>
     <button class="slide_out_button"
         type="button">
     >>
