Deleted some code from my CSS because I changed the name of some of my classes in note.html. Also added my color palette in README.md

--- a/note.html
+++ b/note.html
@@ -18,7 +18,7 @@
             <li>  <a href="#">Docs</a></li>
         </ul>
     </header>
-    <nav class="sidelist">
+    <nav class="sidemenu">
         <button class="slide_in_button"
         type="button">
         <<
@@ -34,13 +34,13 @@
         type="button">
         +
         </button>
-        <section class="container">
+        <section class="text_area_container">
             <textarea id="story" name="story"
             rows="5" cols="33">your note here
             </textarea>
             <section class ="buttons">
                 <button class="save_button"type="button">
-                save
+                save    
                 </button>
                 <button class="delete" type="button">
                 delete
